testData/inspections/relativeEntry/quickFix4.gitignore
<error descr="'foo/./foobar' entry contains relative path">foo/.<caret>/foobar</error>